--- a/SinavSistemi/SinavSistemi.csproj
+++ b/SinavSistemi/SinavSistemi.csproj
@@ -163,6 +163,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\CevapModel.cs" />
+    <Compile Include="Model\Denge.cs" />
+    <Compile Include="Model\OgrenciKullanici.cs" />
     <Compile Include="Model\Profil.cs" />
     <Compile Include="Ogrenci.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -175,6 +178,9 @@
     <Compile Include="Services\Toastr\ToastrService.cs" />
     <Compile Include="Services\Toastr\ToastrType.cs" />
     <Compile Include="Sinav.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sonCevaplar.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Soru.cs">
@@ -353,6 +359,7 @@
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Student\Exam.cshtml" />
     <Content Include="Views\Teacher\AddQuestion.cshtml" />
+    <Content Include="Views\Teacher\GetStudents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
